# denso_robot_ros

./: .gitignore
bcap_service_examples/scripts/: bcap.py  close_hand.sh  get_control.sh  get_robot.sh  manual.txt  manual_reset.sh  motion_preparation.sh  motion_preparation_state.sh  open_hand.sh  preparation.py  reset.sh  take_arm.sh
bcap_service_examples/src/: CMakeLists.txt  hand.cpp  hand.h  motion_prepare.cpp  reset_cobotta.cpp
denso_robot_bringup/launch/: cobotta_bringup.launch  denso_robot_bringup.launch
denso_robot_control/: CMakeLists.txt  package.xml
denso_robot_control/include/denso_robot_control/: denso_robot_hw.h  joint_limits_interface_ex.h
denso_robot_control/launch/: denso_robot_control.launch  denso_robot_control.launch.xml
denso_robot_control/src/: denso_robot_control.cpp  denso_robot_hw.cpp
denso_robot_control/srv/: GetVariable.srv  HandIO.srv  SetVariable.srv
denso_robot_core/include/denso_robot_core/: denso_controller.h  denso_robot_rc8.h  tinyxml2.h
denso_robot_core/src/: denso_controller_rc8.cpp  denso_robot_rc8.cpp  tinyxml2.cpp
denso_robot_moveit_config/config/: cobotta_config
denso_robot_moveit_config/launch/: move_group.launch  planning_context.launch
